--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <p>Email: <a href="mailto:sirajablu4548@gmail.com">sirajablu4548@gmail.com</a></p>
     <p>Phone: +91 8870389692</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/abthulla-siraj" target="_blank">linkedin.com/in/abthulla-siraj</a></p>
-    <a class="resume-link" href="Resume(AbthullaSirajM).pdf" download>Download Resume</a>
+    <a class="resume-link" href="AbthullaSiraj(resume)New.pdf" download>Download Resume</a>
   </section>
 
   <footer>
@@ -160,3 +160,4 @@
   </script>
 </body>
 </html>
+
