Link stylesheet in index.html
Added a link to the stylesheet in the head section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Abthulla Siraj M | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="theme-switch">
@@ -74,5 +75,6 @@
   </script>
 </body>
 </html>
+
 
 
