--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <p>Email: <a href="mailto:sirajablu4548@gmail.com">sirajablu4548@gmail.com</a></p>
     <p>Phone: +91 8870389692</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/abthulla-siraj" target="_blank">linkedin.com/in/abthulla-siraj</a></p>
-    <a class="resume-link" href="AbthullaSiraj(resume)New.pdf" download>Download Resume</a>
+    <a class="resume-link" href="Abthulla Siraj(resume) (2).pdf" download>Download Resume</a>
   </section>
 
   <footer>
@@ -75,6 +75,7 @@
   </script>
 </body>
 </html>
+
 
 
 
